<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/baseline_home"
        android:title="@string/title_home"/>
    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/baseline_search"
        android:title="@string/title_search"/>
    <item
        android:id="@+id/navigation_code"
        android:icon="@drawable/baseline_qrcode"
        android:title="@string/title_code" />
    <item
        android:id="@+id/navigation_favoris"
        android:icon="@drawable/baseline_favoris"
        android:title="@string/title_favoris"/>
    <item
        android:id="@+id/navigation_people"
        android:icon="@drawable/baseline_people"
        android:title="@string/title_people"/>




</menu>