<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.epf.MovieSearch.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_detail_movie"
            app:destination="@id/navigation_detail_movie" />
    </fragment>
    <fragment
        android:id="@+id/navigation_search"
        android:name="com.epf.MovieSearch.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" >
        <action
            android:id="@+id/action_navigation_search_to_navigation_detail_movie"
            app:destination="@id/navigation_detail_movie" />
    </fragment>
    <fragment
        android:id="@+id/navigation_code"
        android:name="com.epf.MovieSearch.CodeFragment"
        android:label="@string/title_code"
        tools:layout="@layout/fragment_code"/>
    <fragment
        android:id="@+id/navigation_favoris"
        android:name="com.epf.MovieSearch.FavorisFragment"
        android:label="@string/title_favoris"
        tools:layout="@layout/fragment_favoris" />
    <fragment
        android:id="@+id/navigation_detail_movie"
        android:name="com.epf.MovieSearch.DetailsMovieFragment"
        android:label="Détails du film"
        tools:layout="@layout/fragment_details"/>
    <fragment
        android:id="@+id/navigation_people"
        android:name="com.epf.MovieSearch.PeopleFragment"
        android:label="Acteurs populaires"
        tools:layout="@layout/fragment_people"/>

    <fragment
        android:id="@+id/navigation_list_people"
        android:name="com.epf.MovieSearch.ListFilmActorFragment"
        android:label="Films associés à l'acteur"
        tools:layout="@layout/fragment_list_movie"/>




</navigation>